--- a/.gitignore
+++ b/.gitignore
@@ -152,10 +152,10 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-.pth
-.pt
-.pt2
-.onnx
+*.pth
+*.pt
+*.pt2
+*.onnx
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
